--- a/config.yaml
+++ b/config.yaml
@@ -74,6 +74,9 @@ episodes:
 # Information for Learners
 learners: 
 
+# Information for Instructors
+instructors: 
+
 # Learner Profiles
 profiles: 
 
