--- a/config.yaml
+++ b/config.yaml
@@ -13,6 +13,7 @@
 # and themed with your own logo and alt-text (see `carpentry_description`)
 # See https://carpentries.github.io/sandpaper-docs/editing.html#adding-a-custom-logo
 carpentry: 'rcac'
+varnish: aseetharam/varnish
 
 # Alt-text description of the lesson.
 carpentry_description: 'Lesson Description'
